--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,10 @@ Description: TODO: what does this package do?
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
+Depends: 
+    R (>= 3.3.0), 
+    stats, 
+    graphics
 LinkingTo: 
     Rcpp, 
     RcppArmadillo, 
@@ -25,4 +29,5 @@ Imports:
 RoxygenNote: 6.1.1
 SystemRequirements: C++11
 Suggests: 
-    testthat
+    testthat,
+    microbenchmark
