--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,13 @@ export(mssm)
 export(mssm_control)
 import(nloptr)
 importFrom(Rcpp,sourceCpp)
+importFrom(graphics,abline)
+importFrom(graphics,lines)
+importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,model.response)
+importFrom(stats,sd)
+importFrom(stats,terms)
 useDynLib(mssm, .registration = TRUE)
