--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,10 @@ S3method(logLik,mssm)
 S3method(logLik,mssmLaplace)
 S3method(plot,mssm)
 S3method(plot,mssmEss)
+S3method(print,mssm)
 S3method(print,mssmEss)
+S3method(print,mssmFunc)
+S3method(print,mssmLaplace)
 export(get_ess)
 export(mssm)
 export(mssm_control)
@@ -14,6 +17,8 @@ importFrom(graphics,abline)
 importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,plot)
+importFrom(stats,cov2cor)
+importFrom(stats,logLik)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,model.response)
