fix seq fault when using one thread fix issue in manual page change all tests on CRAN to use one thread from the thread pool

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,9 +14,10 @@ Description: Provides methods to perform parameter estimation and
   make analysis of a multivariate observed time series which depends on a 
   latent state variable. All methods scale well in the dimension 
   of the observed outcomes. The package contains an implementation of a Laplace 
-  approximation, particle filters like suggested by Lin et al. (2005)
+  approximation, particle filters like suggested by Lin, Zhang, Cheng, & Chen 
+  (2005)
   <doi:10.1198/016214505000000349>, and the gradient and observed information
-  matrix approximation suggested by Poyiadjis et al. (2011) 
+  matrix approximation suggested by Poyiadjis, Doucet, & Singh (2011) 
   <doi:10.1093/biomet/asq062>.
 License: GPL-2
 Encoding: UTF-8
