use Github actions

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -4,10 +4,10 @@
 ^TODO$
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^\.travis\.yml$
 render_toc\.R
 ^tests/testthat/local-tests-res/*
 ^tests/.test-script.R$
 .*Rplots.pdf$
 ^cran-comments.md$
 ^CRAN-RELEASE$
+^\.github$
